PROJECT(wwa-engine-game)

SET(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(Vulkan REQUIRED FATAL_ERROR)
FIND_PACKAGE(glfw3 REQUIRED FATAL_ERROR)

SET(ENGINE_DIR ${CMAKE_SOURCE_DIR}/engine)

INCLUDE_DIRECTORIES(${ENGINE_DIR})

SET(SOURCE_FILES
    main.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} wwa-engine-graphics)

TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PRIVATE -Wall -Wpedantic -Werror -O0)