PROJECT(wwa-engine-graphics)

SET(GLM_DIR ${CMAKE_SOURCE_DIR}/glm)
SET(BOOST_DIR ${CMAKE_SOURCE_DIR}/boost/libs)

INCLUDE_DIRECTORIES(${GLM_DIR} ${BOOST_DIR})

SET(SOURCE_FILES
        init.cpp
)

FIND_PACKAGE(Vulkan REQUIRED FATAL_ERROR)
FIND_PACKAGE(glfw3 REQUIRED FATAL_ERROR)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC vulkan glfw)
